syntax = "proto3";

package api;

option go_package = "./;api";

service AuthService {
    rpc Register(UserRequest) returns (UserIdentity) {}
    rpc Authorize(UserRequest) returns (AuthResponse) {}
}

message UserIdentity{
    string email = 2;
}

message UserRequest {
    string email = 1;
    string password = 2;
}

message AuthResponse {
    string token = 1;
    string email = 2;
}